[metadata]
name = trio-scgi
version = 0.2.0
description = SCGI implementation based on Trio
long_description = file: README.rst
url = https://github.com/joernheissler/trio-scgi/
author = Jörn Heissler
keywords =
    trio
    scgi
license = MIT
classifiers =
    Development Status :: 4 - Beta

    License :: OSI Approved :: MIT License

    Intended Audience :: Developers

    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7

[options]
zip_safe = True
include_package_data = False
packages = trio_scgi
install_requires =
    trio
    multidict
python_requires = >= 3.5.3

[bdist_wheel]
python-tag = py3
